// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`types.ts 1`] = `
====================================options=====================================
parsers: ["typescript"]
printWidth: 80
quoteProps: "as-needed"
                                                                                | printWidth
=====================================input======================================
type T = {
  0: string;
  5: number;
}

type U = {
  0: string;
  "5": number;
}

=====================================output=====================================
type T = {
  0: string;
  5: number;
};

type U = {
  0: string;
  "5": number;
};

================================================================================
`;

exports[`types.ts 2`] = `
====================================options=====================================
parsers: ["typescript"]
printWidth: 80
quoteProps: "preserve"
                                                                                | printWidth
=====================================input======================================
type T = {
  0: string;
  5: number;
}

type U = {
  0: string;
  "5": number;
}

=====================================output=====================================
type T = {
  0: string;
  5: number;
};

type U = {
  0: string;
  "5": number;
};

================================================================================
`;

exports[`types.ts 3`] = `
====================================options=====================================
parsers: ["typescript"]
printWidth: 80
quoteProps: "consistent"
                                                                                | printWidth
=====================================input======================================
type T = {
  0: string;
  5: number;
}

type U = {
  0: string;
  "5": number;
}

=====================================output=====================================
type T = {
  0: string;
  5: number;
};

type U = {
  0: string;
  "5": number;
};

================================================================================
`;
